<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">


    <ImageView
        android:id="@+id/chocolate_imageView"
        style="@style/chocolate_imageView_style"
        cardview:layout_constraintStart_toStartOf="parent"
        cardview:layout_constraintTop_toTopOf="@+id/chocolate_name_textView"
        android:contentDescription="@string/a_picture_with_the_current_chocolate"
        cardview:layout_constraintBottom_toBottomOf="@+id/chocolate_price_textView"
        cardview:srcCompat="@drawable/chocolate" />

    <TextView
        android:id="@+id/chocolate_name_textView"
        style="@style/name_textView_style"
        cardview:layout_constraintStart_toEndOf="@+id/chocolate_imageView"
        cardview:layout_constraintTop_toTopOf="parent"
        cardview:layout_constraintEnd_toStartOf="@+id/chocolate_quantity_textView"
        tools:text="Chocolate Name" />

    <TextView
        android:id="@+id/chocolate_price_textView"
        style="@style/price_textView"
        cardview:layout_constraintStart_toStartOf="@+id/chocolate_flavor_textView"
        cardview:layout_constraintTop_toBottomOf="@+id/chocolate_flavor_textView"
        tools:text="15" />

    <ImageView
        android:id="@+id/sell_imageView"
        style="@style/sell_image_style"
        android:contentDescription="@string/sell_button_which_reduces_the_quantity_by_1"
        cardview:layout_constraintBottom_toBottomOf="@+id/chocolate_quantity_textView"
        cardview:layout_constraintEnd_toEndOf="parent"
        cardview:layout_constraintTop_toTopOf="@+id/chocolate_quantity_textView"
        cardview:srcCompat="@drawable/sell" />

    <ImageView
        android:id="@+id/coins_imageView"
        style="@style/coins_image_style"
        android:contentDescription="@string/a_image_which_represents_the_value_of_the_chocolate"
        cardview:layout_constraintBottom_toBottomOf="@+id/chocolate_price_textView"
        cardview:layout_constraintStart_toEndOf="@+id/chocolate_price_textView"
        cardview:layout_constraintTop_toTopOf="@+id/chocolate_price_textView"
        cardview:srcCompat="@drawable/coins" />

    <TextView
        android:id="@+id/chocolate_flavor_textView"
        cardview:layout_constraintEnd_toEndOf="@+id/chocolate_name_textView"
        cardview:layout_constraintStart_toStartOf="@+id/chocolate_name_textView"
        cardview:layout_constraintTop_toBottomOf="@+id/chocolate_name_textView"
        style="@style/flavor_textView_style"
        tools:text="Flavor" />

    <TextView
        android:id="@+id/chocolate_quantity_textView"
        style="@style/quantity_textView_style"
        cardview:layout_constraintBottom_toBottomOf="@+id/chocolate_price_textView"
        cardview:layout_constraintEnd_toStartOf="@+id/sell_imageView"
        cardview:layout_constraintTop_toTopOf="parent"
        tools:text="15" />


</android.support.constraint.ConstraintLayout>